@@ -1,3 +1,9 @@
+2008-02-18  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokeravatar.py.in
+	(PokerAvatarTestCase.test18_badAttempts): Wrote function.
+	(PokerAvatarTestCase.requestsWithWrongSerial): Wrote function.
+
 2008-02-18  Loic Dachary  <loic@pokerdev.pokersource.info>
 
 	* Release 1.3.0
